# vindiniumClient

./: .gitignore  CBehaviorMgr.cpp  CBehaviorMgr.h  CClient.cpp  CClient.h  CGame.cpp  CGame.h  CHero.cpp  CHero.h  CHttpTools.cpp  CHttpTools.h  CMakeLists.txt  CPosition.h  CRandomBehaviorModule.cpp  CRandomBehaviorModule.h  CTicTac.cpp  IBehaviorModule.h  README  createBehavior.sh  createBuild.sh  vindiniumLauncher.cpp  vindiniumTest.cpp
behaviorModulesSrc/TheRalphBot/: CTheRalphBehaviorModule.cpp  CTheRalphBehaviorModule.h
behaviorModulesSrc/aggressive/: CAggressiveBehaviorModule.cpp  CAggressiveBehaviorModule.h
behaviorModulesSrc/aggressiveClose/: CAggressiveCloseBehaviorModule.cpp  CAggressiveCloseBehaviorModule.h
behaviorModulesSrc/botMitch/: CBotMitchBehaviorModule.cpp  CBotMitchBehaviorModule.h
behaviorModulesSrc/conquerGoldMine/: CConquerGoldMineBehaviorModule.cpp  CConquerGoldMineBehaviorModule.h
behaviorModulesSrc/needLife/: CNeedLifeBehaviorModule.cpp  CNeedLifeBehaviorModule.h
behaviorModulesSrc/random/: CRandomBehaviorModule.cpp  CRandomBehaviorModule.h
botMitch/: CMyBotClient.cpp  CMyBotClient.h  botAI.cpp
libmobeSrc/: CBehaviorMgr.cpp  CBehaviorMgr.h  CClient.cpp  CClient.h  CDuration.h  CGame.cpp  CGame.h  CHero.cpp  CHero.h  CHttpTools.cpp  CHttpTools.h  CPosition.h  CTicTac.h  IBehaviorModule.h  README
libmobeSrc/utest/: testPathTo.cpp
